Improve Swagger DMaaP Mediator Producer
Issue-ID: NONRTRIC-702
