# dmaap-mediator-producer/api/swagger.json
@@ -1,31 +1,14 @@
-// Package docs GENERATED BY THE COMMAND ABOVE; DO NOT EDIT
-// This file was generated by swaggo/swag
-package docs
-
-import (
-	"bytes"
-	"encoding/json"
-	"strings"
-	"text/template"
-
-	"github.com/swaggo/swag"
-)
-
-var doc = `{
-    "schemes": {{ marshal .Schemes }},
+{
     "swagger": "2.0",
     "info": {
-        "description": "{{escape .Description}}",
-        "title": "{{.Title}}",
+        "title": "DMaaP Mediator Producer",
         "contact": {},
         "license": {
             "name": "Apache 2.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "{{.Version}}"
+        "version": "1.1.0"
     },
-    "host": "{{.Host}}",
-    "basePath": "{{.BasePath}}",
     "paths": {
         "/admin/log": {
             "put": {
@@ -53,9 +36,15 @@ var doc = `{
                         "description": ""
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Problem as defined in https://tools.ietf.org/html/rfc7807",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/ErrorInfo"
+                        },
+                        "headers": {
+                            "Content-Type": {
+                                "type": "string",
+                                "description": "application/problem+json"
+                            }
                         }
                     }
                 }
@@ -64,13 +53,19 @@ var doc = `{
         "/health_check": {
             "get": {
                 "description": "Get the status of the producer. Will show if the producer has registered in ICS.",
+                "produces": [
+                    "application/json"
+                ],
                 "tags": [
                     "Data producer (callbacks)"
                 ],
                 "summary": "Get status",
                 "responses": {
                     "200": {
-                        "description": ""
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/"
+                        }
                     }
                 }
             }
@@ -92,7 +87,7 @@ var doc = `{
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/jobs.JobInfo"
+                            "$ref": "#/definitions/JobInfo"
                         }
                     }
                 ],
@@ -101,9 +96,15 @@ var doc = `{
                         "description": ""
                     },
                     "400": {
-                        "description": "Bad Request",
+                        "description": "Problem as defined in https://tools.ietf.org/html/rfc7807",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/ErrorInfo"
+                        },
+                        "headers": {
+                            "Content-Type": {
+                                "type": "string",
+                                "description": "application/problem+json"
+                            }
                         }
                     }
                 }
@@ -148,7 +149,17 @@ var doc = `{
         }
     },
     "definitions": {
-        "jobs.BufferTimeout": {
+        "": {
+            "type": "object",
+            "properties": {
+                "registeredStatus": {
+                    "description": "The registration status of the producer in Information Coordinator Service. Either `registered` or `not registered`",
+                    "type": "string",
+                    "example": "not registered"
+                }
+            }
+        },
+        "BufferTimeout": {
             "type": "object",
             "properties": {
                 "maxSize": {
@@ -159,11 +170,38 @@ var doc = `{
                 }
             }
         },
-        "jobs.JobInfo": {
+        "ErrorInfo": {
+            "type": "object",
+            "properties": {
+                "detail": {
+                    "description": "A human-readable explanation specific to this occurrence of the problem.",
+                    "type": "string",
+                    "example": "Info job type not found"
+                },
+                "instance": {
+                    "description": "A URI reference that identifies the specific occurrence of the problem.",
+                    "type": "string"
+                },
+                "status": {
+                    "description": "The HTTP status code generated by the origin server for this occurrence of the problem.",
+                    "type": "integer",
+                    "example": 400
+                },
+                "title": {
+                    "description": "A short, human-readable summary of the problem type.",
+                    "type": "string"
+                },
+                "type": {
+                    "description": "A URI reference that identifies the problem type.",
+                    "type": "string"
+                }
+            }
+        },
+        "JobInfo": {
             "type": "object",
             "properties": {
                 "info_job_data": {
-                    "$ref": "#/definitions/jobs.Parameters"
+                    "$ref": "#/definitions/Parameters"
                 },
                 "info_job_identity": {
                     "type": "string"
@@ -182,67 +220,13 @@ var doc = `{
                 }
             }
         },
-        "jobs.Parameters": {
+        "Parameters": {
             "type": "object",
             "properties": {
                 "bufferTimeout": {
-                    "$ref": "#/definitions/jobs.BufferTimeout"
+                    "$ref": "#/definitions/BufferTimeout"
                 }
             }
         }
     }
-}`
-
-type swaggerInfo struct {
-	Version     string
-	Host        string
-	BasePath    string
-	Schemes     []string
-	Title       string
-	Description string
-}
-
-// SwaggerInfo holds exported Swagger Info so clients can modify it
-var SwaggerInfo = swaggerInfo{
-	Version:     "1.1.0",
-	Host:        "",
-	BasePath:    "",
-	Schemes:     []string{},
-	Title:       "DMaaP Mediator Producer",
-	Description: "",
-}
-
-type s struct{}
-
-func (s *s) ReadDoc() string {
-	sInfo := SwaggerInfo
-	sInfo.Description = strings.Replace(sInfo.Description, "\n", "\\n", -1)
-
-	t, err := template.New("swagger_info").Funcs(template.FuncMap{
-		"marshal": func(v interface{}) string {
-			a, _ := json.Marshal(v)
-			return string(a)
-		},
-		"escape": func(v interface{}) string {
-			// escape tabs
-			str := strings.Replace(v.(string), "\t", "\\t", -1)
-			// replace " with \", and if that results in \\", replace that with \\\"
-			str = strings.Replace(str, "\"", "\\\"", -1)
-			return strings.Replace(str, "\\\\\"", "\\\\\\\"", -1)
-		},
-	}).Parse(doc)
-	if err != nil {
-		return doc
-	}
-
-	var tpl bytes.Buffer
-	if err := t.Execute(&tpl, sInfo); err != nil {
-		return doc
-	}
-
-	return tpl.String()
-}
-
-func init() {
-	swag.Register("swagger", &s{})
 }
